[package]
name = "qmk_programmable_button"
description = "todo"
version = "0.1.0"
edition = "2021"
authors = ["ArtiomSu"]
readme = "todo"
repository = "todo"
license = "Apache-2.0"
keywords = ["qmk", "programmable", "button", "input", "libcInput"]

[dependencies]
input = "0.7.1"
libc = "0.2"
obws = "0.10.0-beta.3"
tokio = { version = "1.21.0", features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
reqwest = { version = "0.11.12", features = ["json", "stream"] }

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"